src/test/ui/fn-in-pat.stderr
error[E0164]: expected tuple struct/variant, found method `<A>::new`
  --> $DIR/fn-in-pat.rs:11:9
   |
LL |         A::new() => (),
   |         ^^^^^^^^ `fn` calls are not allowed in patterns
   |
   = help: for more information, visit https://doc.rust-lang.org/book/ch18-00-patterns.html

error: aborting due to previous error

For more information about this error, try `rustc --explain E0164`.
